# EyeComfort

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL_GUIDE.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  VisionBreak-v2.0-SIGNED.apk.idsig  debug.keystore  index.html  package-lock.json  package.json  vite.config.ts
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build-apk.yml
scripts/: build-android.sh  dev-commands.sh  setup-env.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: EyeCareTimer.css  EyeCareTimer.tsx  PomodoroTimer.css  PomodoroTimer.tsx  SleepCycle.css  SleepCycle.tsx  ThemeToggle.css  ThemeToggle.tsx
src/styles/: App.css  index.css
