[package]
name = "vision-break"
version = "0.1.0"
description = "A lightweight wellness app"
authors = ["you"]
edition = "2021"

[lib]
name = "vision_break_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
